--- a/424Project/424Project.vcxproj
+++ b/424Project/424Project.vcxproj
@@ -140,6 +140,9 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="424Project.cpp" />
+    <ClCompile Include="Entity.cpp" />
+    <ClCompile Include="Sally.cpp" />
+    <ClCompile Include="Terrain.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
