--- a/424Project/424Project.vcxproj
+++ b/424Project/424Project.vcxproj
@@ -144,6 +144,11 @@
     <ClCompile Include="Sally.cpp" />
     <ClCompile Include="Terrain.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Entity.h" />
+    <ClInclude Include="Sally.h" />
+    <ClInclude Include="Terrain.h" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
