--- a/424Project/424Project.vcxproj
+++ b/424Project/424Project.vcxproj
@@ -144,12 +144,14 @@
     <ClCompile Include="Entity.cpp" />
     <ClCompile Include="Sally.cpp" />
     <ClCompile Include="Terrain.cpp" />
+    <ClCompile Include="Wall.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="engine.h" />
     <ClInclude Include="Entity.h" />
     <ClInclude Include="Sally.h" />
     <ClInclude Include="Terrain.h" />
+    <ClInclude Include="Wall.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
