--- a/424Project/424Project.vcxproj
+++ b/424Project/424Project.vcxproj
@@ -142,6 +142,7 @@
     <ClCompile Include="424Project.cpp" />
     <ClCompile Include="engine.cpp" />
     <ClCompile Include="Entity.cpp" />
+    <ClCompile Include="Menu.cpp" />
     <ClCompile Include="Sally.cpp" />
     <ClCompile Include="Terrain.cpp" />
     <ClCompile Include="Wall.cpp" />
@@ -149,6 +150,7 @@
   <ItemGroup>
     <ClInclude Include="engine.h" />
     <ClInclude Include="Entity.h" />
+    <ClInclude Include="Menu.h" />
     <ClInclude Include="Sally.h" />
     <ClInclude Include="Terrain.h" />
     <ClInclude Include="Wall.h" />
