did a think for frameSize

--- a/424Project/424Project.vcxproj
+++ b/424Project/424Project.vcxproj
@@ -150,6 +150,7 @@
   <ItemGroup>
     <ClInclude Include="engine.h" />
     <ClInclude Include="Entity.h" />
+    <ClInclude Include="frameDefinition.h" />
     <ClInclude Include="Menu.h" />
     <ClInclude Include="Sally.h" />
     <ClInclude Include="Terrain.h" />
